--- a/index.ipynb
+++ b/index.ipynb
@@ -188,16 +188,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Frontier Restaurant'"
+       "{'categories': [{'alias': 'mexican', 'title': 'Mexican'},\n",
+       "  {'alias': 'diners', 'title': 'Diners'},\n",
+       "  {'alias': 'tradamerican', 'title': 'American (Traditional)'}],\n",
+       " 'coordinates': {'latitude': 35.0808088832532, 'longitude': -106.619402244687},\n",
+       " 'display_phone': '(505) 266-0550',\n",
+       " 'distance': 4033.6583235266075,\n",
+       " 'id': 'frontier-restaurant-albuquerque-2',\n",
+       " 'image_url': 'https://s3-media4.fl.yelpcdn.com/bphoto/M9L2z6-G0NobuDJ6YTh6VA/o.jpg',\n",
+       " 'is_closed': True,\n",
+       " 'location': {'address1': '2400 Central Ave SE',\n",
+       "  'address2': '',\n",
+       "  'address3': '',\n",
+       "  'city': 'Albuquerque',\n",
+       "  'country': 'US',\n",
+       "  'display_address': ['2400 Central Ave SE', 'Albuquerque, NM 87106'],\n",
+       "  'state': 'NM',\n",
+       "  'zip_code': '87106'},\n",
+       " 'name': 'Frontier Restaurant',\n",
+       " 'phone': '+15052660550',\n",
+       " 'price': '$',\n",
+       " 'rating': 4.0,\n",
+       " 'review_count': 1369,\n",
+       " 'transactions': [],\n",
+       " 'url': 'https://www.yelp.com/biz/frontier-restaurant-albuquerque-2?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,24 +230,21 @@
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return restaurant\n",
     "    elif len(alternative['price']) < len(restaurant['price']):\n",
-    "        return alternative['name']\n",
+    "        return alternative\n",
     "cheaper_restaurant(fork_fig, frontier_restaurant)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-57-f633e17b0823>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheaper_restaurant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfork_fig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrontier_restaurant\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'Frontier Restaurant'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheaper_restaurant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfrontier_restaurant\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfork_fig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'Frontier Restaurant'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frontier Restaurant\n",
+      "Frontier Restaurant\n"
      ]
     }
    ],
