--- a/index.ipynb
+++ b/index.ipynb
@@ -323,8 +323,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if restaurants['is closed'] == True :\n",
-    "        return restaurants\n"
+    "    for rest in resta\n"
    ]
   },
   {
