--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for rest in restaurants:\n",
-    "        if rest['is_closed']\n"
+    "        if rest['is_closed'] == True:\n",
+    "            return \n"
    ]
   },
   {
